# homeverks

./: .gitignore  CMakeLists.txt  LICENSE
CSCI232/: .gitignore  CMakeLists.txt
CSCI232/HW1/: run.sh  task.md
CSCI232/HW2/: README.md  hw2.c
CSCI232/HW3/: simple_shell.c
CSCI232/HW4/: gameserver.c  quiz.txt  task.md
CSCI232/echoserver/: Makefile  ThreadLab2.docx  ThreadLab3.docx  client.c  connectsock.c  echoserver.c
CSCI232/final_project/: .gitignore  CMakeLists.txt  gameserver.c  gameserver.h  plan.docx  readme.txt  task.md
CSCI233/HW2/: .gitignore
CSCI233/HW2/src/m_nny/Client/: ChatClient.java  Main.java
CSCI233/HW2/src/m_nny/Server/: ChatServer.java  ClientHandler.java  Group.java  Main.java  Session.java
CSCI233/final/: .gitignore  README.md
CSCI233/final/src/FT/: ClientHandler.java  FileModel.java  FileTracker.java  Main.java
CSCI233/final/src/Peer/: MainGUI.java  Peer.java
HW1/: README.md  h1.sh  run.sh  task.md
HW2/: a.out  hw2.c  task.md  test.c
HW3/: simple_shell.c  task.md
HW4/: gameserver.c  passivesock.c  task.md
ROBT310/project4/: .gitignore  report.docx
ROBT310/project4/src/: project4.py
ROBT310/project5/: .gitignore
ROBT310/project5/python/: lzw_array.py
echoserver/: echoserver.c  gameserver.c
